--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,6 +3,7 @@
   <head>
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
   </head>
   <body>
     {{{body}}}
