--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,36 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+.card img {
+  max-width: 100px;
+  height: 200px;
+  padding-top: 10px;
 }
 
-a {
-  color: #00B7FF;
+.card .card-title {
+  font-size: 20px;
+}
+
+.card .card-text {
+  font-size: 15px;
+}
+
+.price {
+  font-size: 20px;
+  font-weight: bold;
+  padding: 15px;
+}
+
+.col-sm-4 {
+  padding-top: 20px;
+}
+
+.center {
+  padding-top: 100px;
+}
+
+.error-box {
+  text-align: center;
+}
+
+.error-img {
+  width: 300px;
+  margin-bottom: 20px;
 }
